--- a/package.json
+++ b/package.json
@@ -4,18 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test SECRET_KEY=chavesecreta jest --forceExit --runInBand"
+    "test": "cross-env NODE_ENV=test SECRET_KEY=chavesecreta jest --forceExit --runInBand",
+    "dev": "ts-node-dev --ignore-watch node_modules --cls --rs src/server.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
-    "@types/node": "^16.11.10",
+    "@types/node": "^18.16.3",
     "@types/supertest": "^2.0.12",
+    "cross-env": "^7.0.3",
     "jest": "^29.4.3",
     "sqlite3": "^5.1.4",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
-    "cross-env": "^7.0.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "init": "^0.1.2",
+    "pg": "^8.10.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.15"
   }
 }
