--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "init": "^0.1.2",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.15"
+    "typeorm": "^0.3.15",
+    "zod": "^3.21.4"
   }
 }
